# momentor

./: Cargo.toml
assets/shaders/: parallax.wgsl  screen_space.wgsl
assets/textures/: cyborg.yml
src/: animation.rs  assets.rs  atlas_data.rs  background.rs  camera.rs  debug.rs  lib.rs  main.rs  materials.rs  music.rs  platforms.rs  player.rs  screen_diags.rs  world.rs
src/components/: facing.rs
