[package]
name = "momentor"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
debug = false
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.2", default-features = false, features = [
  "bevy_gizmos",
  "bevy_text",
  "default_font",
  "bevy_asset",
  "bevy_audio",
  "bevy_core_pipeline",
  "bevy_render",
  "bevy_sprite",
  "bevy_winit",
  "multi-threaded",
  "png",
  "vorbis",
] }
bevy_asset_loader = "0.17.0"
bevy_egui = "0.21.0"
bevy_pixel_camera = "0.5.0"
bevy_xpbd_2d = { version = "0.2", features = ["debug-plugin"] }
rand = "0.8.5"
serde = "1.0.187"
serde_yaml = "0.9.25"
anyhow = "1.0.75"
leafwing-input-manager = "0.10.0"
bevy_framepace = "0.13.3"
